// iOS - since we use a modern proto-compiler, we must specify
// the legacy proto format.
syntax = "proto2";

// iOS - package name determines class prefix
package E2EEMessageProtos;

option java_package = "org.whispersystems.signalservice.internal.e2eemessage";
option java_outer_classname = "E2EEMessageProtos";

message Content {
    optional uint32 version = 1;
    optional bytes cipherText = 2;
    optional bytes signedEKey = 3;
    optional bytes eKey = 4;
    optional bytes identityKey = 5;
}